# reverse-engineering-assistant

./: .gitattributes  .gitignore  AGENTS.md  BUILD_STATUS.md  CLAUDE.md  CODE_REVIEW.md  DEVELOPER.md  HEADLESS.md  HEADLESS_ARCHITECTURE.md  HEADLESS_IMPLEMENTATION.md  HEADLESS_IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile  Module.manifest  README.md  TESTING.md  TEST_STATUS.md  WORKFLOW_NOTE.md  WORKFLOW_SETUP.md  build.gradle  extension.properties  pyproject.toml  requirements-headless.txt  requirements-test.txt  requirements.txt  reva_headless.py  test_binary  test_mcp_request.py  test_minimal.py
.claude/: README.md  launch.json  settings.json  setup-environment.sh
.claude-plugin/: marketplace.json
.claude/agents/: ghidra-api-expert.md  reva-setup-installer.md
.claude/hooks/: clone-ghidra-source.sh  gradle-proxy.py  install-ghidra-binary.sh  setup-gradle.sh  setup-remote-env.sh
.continue/docs/: new-doc.yaml
.devcontainer/: Dockerfile  devcontainer.json  postCreateCommand.sh
.github/: CI_WORKFLOWS.md  WORKFLOW_SETUP.md  copilot-instructions.md  dependabot.yml
.github/workflows/: '  claude.yml  copilot-setup-steps.yml  publish-ghidra.yml  publish-pypi.yml  publish-to-pypi.yml  test-ghidra.yml  test-headless.yml  test-python.yml
ReVa/: .mcp.json
ReVa/.claude-plugin/: plugin.json
ReVa/skills/binary-triage/: SKILL.md
ReVa/skills/ctf-crypto/: SKILL.md  patterns.md
ReVa/skills/ctf-pwn/: SKILL.md  patterns.md
ReVa/skills/ctf-rev/: SKILL.md  patterns.md
ReVa/skills/deep-analysis/: SKILL.md  examples.md  patterns.md
ReVa/skills/pyghidra-scripting/: SKILL.md
ReVa/skills/pyghidra-scripting/references/: decompiler-pcode.md  flat-api.md  jpype-interop.md  persistent-scripts.md  recipes.md
assets/: c2-analysis-ascii.cast  is-it-malware-ascii.cast
binary-ninja-assistant/: README.md  __init__.py  plugin.json
cli/: CLAUDE.md  README.md  pyproject.toml  pytest.ini  test_integration.py  test_project_dir.py
cli/src/reverse_engineering_assistant/: __init__.py  claude_integration.py  cli.py  ui_manager.py
cli/tests/: __init__.py  conftest.py  test_api.py  test_cli.py  test_dynamic_loading.py  test_e2e_integration.py  test_e2e_mcp_client.py  test_e2e_mcp_workflow.py  test_e2e_project_management.py
config/: reva-headless-example.properties
docs/: MCP_REVA_CLI.md
docs/configuration/: authentication.md
ghidra-assistant/: .classpath  .gitignore  .project  README.md  build.gradle  extension.properties  gext-build  requirements.txt  settings.gradle
ghidra-assistant/ghidra_scripts/: assistant_analysis.py  assistant_analysis.py3
ghidra-assistant/src/main/: proto
ghidra-assistant/src/main/java/ghidra_assistant/: GhidraAssistantPlugin.java  GhidraAssistantPluginRegistration.java  GhidraAssistantScript.java
ghidra-assistant/src/main/java/reva/: RevaCallbackHandler.java  RevaChatService.java  RevaPlugin.java  RevaService.java  RevaTool.java
ghidra_scripts/: SampleScript.java  assistant_analysis.py3  sample_script.py
protocol/: RevaBookmark.proto  RevaChat.proto  RevaComment.proto  RevaData.proto  RevaGetCursor.proto  RevaGetDataAtAddress.proto  RevaGetDecompilation.proto  RevaGetReferences.proto  RevaGetSymbols.proto  RevaHandshake.proto  RevaHeartbeat.proto  RevaReferences.proto  RevaScript.proto  RevaVariable.proto
reverse-engineering-assistant/: README.md  pyproject.toml
reverse-engineering-assistant/reverse-engineering-assistant/: assistant.py  documents.py  model.py  tool.py
reverse-engineering-assistant/reverse_engineering_assistant/: .gitignore  assistant.py  assistant_api_server.py  chat_client.py  configuration.py  crash_dump.py  documents.py  llama_index_overrides.py  model.py  reva_exceptions.py  reva_server.py  tool.py  tool_protocol.py
reverse-engineering-assistant/reverse_engineering_assistant/api_server_tools/: __init__.py  connection.py  function_tools.py  llm_tools.py  re_tools.py
reverse-engineering-assistant/reverse_engineering_assistant/api_server_tools/re_tool_box/: __init__.py  bookmarks.py  comment.py  cross_reference.py  cursor.py  data.py  decompilation.py  scripts.py  symbols.py
scripts/: README.md  reva_headless_server.py  sync-version.py  test_headless_quick.py
src/: CLAUDE.md
src/main/help/: CLAUDE.md
src/main/help/help/: TOC_Source.xml
src/main/java/: ghidra_assitant
src/main/java/ghidra_assistant/: GhidraAssistantPlugin.java  GhidraAssistantPluginRegistration.java
src/main/java/reva/: revaAnalyzer.java  revaExporter.java  revaFileSystem.java  revaLoader.java  revaPlugin.java
src/main/java/reva/debug/: CLAUDE.md  DebugCaptureService.java  DebugInfoCollector.java
src/main/java/reva/headless/: CLAUDE.md  RevaHeadlessLauncher.java
src/main/java/reva/plugin/: CLAUDE.md  ConfigChangeListener.java  ConfigManager.java  FollowMeService.java  ReVaPyGhidraSupport.java  RevaPlugin.java  (+3 more)
src/reva_cli/: __init__.py  __main__.py  _version.py  launcher.py  project_manager.py  stdio_bridge.py
src/test.slow/: CLAUDE.md
src/test.slow/java/reva/: AnalyzedFixtureSupport.java  AnalyzedFixtureSupportIntegrationTest.java  CLAUDE.md  RandomPortRegressionIntegrationTest.java  RevaIntegrationTestBase.java
src/test.slow/resources/: logback.xml
src/test/java/reva/: DecompilerNativeHint.java  DecompilerNativeHintTest.java  RevaHeadlessIntegrationTestBase.java  RevaIntegrationTestBase.java
tests/: README.md  __init__.py  conftest.py  helpers.py  requirements.txt  smoke_test.py  test_analysis_jobs_e2e.py  test_api_key_injection.py  test_cli_e2e.py  test_cli_project_manager.py  test_config.py  test_diff_e2e.py  test_e2e_workflow.py  test_headless_e2e.py  test_import_e2e.py  test_launcher.py  test_mcp_tools.py  test_pyghidra.py  test_reva_launcher.py  test_run_script_e2e.py  test_stdio_bridge.py  test_tool_group_cli.py  test_tool_group_cli_e2e.py  test_tool_group_toggle_integration.py  test_vscode_mcp_client_compat.py  test_workflow_correctness.py
tests/fixtures/: test_arm64  test_cpp_arm64  test_cpp_program.cpp  test_cpp_x86_64  test_dataflow.c  test_dataflow_x86_64  test_fat_binary  test_program.c  test_x86_64
(+296 files in other folders)
