[project]
name = "reverse-engineering-assistant"
version = "1.0.0"
description = "ReVa - Reverse Engineering Assistant for Ghidra with MCP server"
requires-python = ">=3.10"
dependencies = [
    "pyghidra>=1.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-timeout>=2.0.0",
    "pytest-sugar>=0.9.0",
    "mcp",
    "httpx>=0.27.0,<1.0",
    "httpx-sse>=0.4.0",
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
timeout = 60
addopts = "-v --tb=short"

[dependency-groups]
dev = [
    "pyghidra>=1.0.0",
    "pytest>=7.0.0",
    "pytest-timeout>=2.0.0",
    "pytest-sugar>=0.9.0",
    "mcp",
    "httpx>=0.27.0,<1.0",
    "httpx-sse>=0.4.0",
]
